tickets form compostion fix, reg text aligned

--- a/plasma/plasma_site/static/plasma_site/base.css
+++ b/plasma/plasma_site/static/plasma_site/base.css
@@ -40,6 +40,10 @@ a,.mini-text,p{
     font-weight: 400;
 }
 
+a{
+    text-decoration: none;
+}
+
 p{
     font-size: 15px;
     line-height: 22px;
